# bandframework

./: .gitmodules  AUTHORS  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  LICENSE  README.md  release-proc.rst
.github/config/: .spellcheck.yml  .wordlist.txt
.github/workflows/: bandframework-ci.yml  spelling_action.yml
examples/: README.md
resources/: README.md
resources/dev_guide/: git_instructions_for_submodules.md  release-proc.rst
resources/sdk/: bandsdk.md  template.md
resources/sdkpolicies/: README.md  bandsdk.md  git_instructions_for_submodules.md  template.md
resources/workshops/Data2024/: README.md
software/: README.md  testingnewbranch.rst
software/BMEX/: BMEX-bandsdk.md  README.md
software/BRICK/: README.md  brickbandsdk.md  compatibility_document.md
software/BRICK/tutorial/: 12C+p.azr  AZURE2_INSTALL.md  README.md  model.py  sample.py  tutorial.ipynb
software/BRICK/tutorial/checks/: angulardistributions.chk  compoundnucleus.chk  lomatrixandpene.chk  pathways.chk
software/BRICK/tutorial/output/: AZUREOut_aa=1_R=1.extrap  AZUREOut_aa=1_R=2.out  chiSquared.out  normalizations.out  param.par  parameters.out
software/Bfrescox/: README.md  frescoxbandsdk.md
software/Bfrescox/Tutorial_I/: BANDCamp21.rst  tutorial1.rst
software/Bfrescox/Tutorial_I/python_scripts/: cadp.py  example_surmise1.py  example_surmise2.py  fitted48Ca.py  frescox_wrapper.py
software/Bfrescox/Tutorial_I/python_scripts/frescox_inputs/: 48Ca.in  48Ca_template.in  D1048cadp.in  LH1048cadp.in  search-el.in  sfresco.in
software/Bfrescox/makefiles/googlecolab/: makefile
software/PUQ/: PUQ-bandsdk.md  README.md
software/SmoothEmulator/: .gitignore  LICENSE.md  README.md  SmoothEmulatorSDK.md
software/SmoothEmulator/SmoothUtilities/software/: CMakeLists.txt
software/SmoothEmulator/doc/User_Manual/: directorystructure.key  emulator.tex  fullmodel.tex  installation.tex  mcmc.tex  pca.tex  simplex.tex  theory.tex  tutorial.tex
software/SmoothEmulator/doc/files/: UserManual.aux  UserManual.out  UserManual.tex  UserManual.toc  directorystructure.key  emulator.tex  fullmodel.tex  installation.aux  installation.out  installation.tex  mcmc.tex  oldtheory.tex  pca.tex  simplex.tex  theory.tex  tutorial.tex
software/SmoothEmulator/doc/files/figs/: directorystructure.key  vslambda_trial.key
software/SmoothEmulator/mylocal/: readme.md
software/SmoothEmulator/mylocal/software/: CMakeLists.txt
software/SmoothEmulator/mylocal/software/fakefullmodels/: fakejetscape.cc  fakerhic.cc  fakesmooth.cc
software/SmoothEmulator/mylocal/software/main_programs/: mcmc_main.cc  pca_calctransformation_main.cc  pca_readinfo_calcy_main.cc  smoothy_calcobs_main.cc  smoothy_surmise_calcobs_main.cc  smoothy_testattrainingpts_main.cc  smoothy_testvsfullmodel_main.cc  smoothy_testvsfullmodelalt_main.cc  smoothy_tune_main.cc
software/SmoothEmulator/software/: CMakeLists.txt
software/SmoothEmulator/software/include/msu_smooth/: PCA.h  emulator.h  master.h  mcmc.h  modelparinfo.h  observableinfo.h  pca.h  priorinfo.h  real.h  scorecard.h  simplex.h  smooth.h  smoothbind.h  traininginfo.h
software/SmoothEmulator/software/include/msu_smoothutils/: commondefs.h  commonutils.h  log.h  misc.h  parametermap.h  randy.h
software/SmoothEmulator/software/src/: emulator.cc  latincube.cc  master.cc  modelparinfo.cc  observableinfo.cc  pca.cc  prior.cc  real.cc  scorecard.cc  simplex.cc  smooth.cc  traininginfo.cc
software/SmoothEmulator/software/src/smooth/: emulator.cc  emulator_CalcY.cc  emulator_io.cc  emulator_tuneMC.cc  emulator_tune_exact.cc  latincube.cc  llcalc.cc  master.cc  masterio.cc  mcmc.cc  mcmc_evaluate.cc  modelparinfo.cc  observableinfo.cc  pca.cc  prior.cc  scorecard.cc  simplex.cc  smooth.cc  smooth_CalcY.cc  traininginfo.cc
software/SmoothEmulator/software/src/smoothutils/Log/: log.cc
software/SmoothEmulator/software/src/smoothutils/Misc/: misc.cc
software/SmoothEmulator/software/src/smoothutils/NumMath/: randy.cc
software/SmoothEmulator/software/src/smoothutils/ParameterMap/: parametermap.cc
software/SmoothEmulator/templates/mylocal/: readme.md
software/SmoothEmulator/templates/mylocal/fakefullmodels/: CMakeLists.txt  fakerhic.cc
software/SmoothEmulator/templates/mylocal/fakemodel/: templatemod.py
software/SmoothEmulator/templates/mylocal/main_programs/: CMakeLists.txt  mcmc_main.cc  pca_calctransformation_main.cc  pca_readinfo_calcy_main.cc  simplex_main.cc  smoothy_calcobs_main.cc  smoothy_readcoefficients_main.cc  smoothy_train_test_main.cc  smoothy_tune_main.cc
software/SmoothEmulator/templates/mylocal/software/: CMakeLists.txt
software/SmoothEmulator/templates/mylocal/software/pybindstuff/: CMakeLists.txt  pybind_main.cc  smoothy_emulate.py
software/SmoothEmulator/templates/myproject/Info/: experimental_info.txt  modelpar_info.txt  observable_info.txt  prior_info.txt
software/SmoothEmulator/templates/myproject/figs/: directions.txt  modelpar_info.txt  observable_info.txt
software/SmoothUtilities/software/: CMakeLists.txt
software/SmoothUtilities/software/include/msu_commonutils/: arrays.h  commondefs.h  commonutils.h  constants.h  gslmatrix.h  misc.h  parametermap.h  qualifier.h  randy.h  sf.h
software/SmoothUtilities/software/src/Arrays/: arraycalc.cc  charray.cc  mclist.cc  mcprlist.cc  ylmarray.cc
software/SmoothUtilities/software/src/GSLMatrix/: gslmatrix.cc
software/SmoothUtilities/software/src/Misc/: lorentzboost.cc  misc.cc
software/SmoothUtilities/software/src/NumMath/: randy.cc
software/SmoothUtilities/software/src/ParameterMap/: parametermap.cc
software/SmoothUtilities/software/src/Qualifiers/: qualifier.cc
software/SmoothUtilities/software/src/SpecialFunctions/Bessel/: bess.cc
software/SmoothUtilities/software/src/SpecialFunctions/CartesianHarmonics/: chcalc.cc
software/SmoothUtilities/software/src/SpecialFunctions/CoulWave/: coulwave.cc
software/parmoo/: README.md  parmoo-bandsdk.md
software/surmise/: README.md  setup.py  setup.py.txt  surmiseSDKcompatibility.md
(+33 files in other folders)
